# leaderboards-web

./: README.md
api/: .env.template  .gitignore  Cargo.toml
api/migrations/: 00001_create_tables.sql  0001_create_tables.sql  0002_add_cups.sql  0003_add_tracks.sql  0004_add_categories.sql
api/src/: main.rs  models.rs  response.rs
api/src/response/: mod.rs
api/src/routes/: mod.rs  records.rs  test.rs  users.rs
