[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
dotenvy = "0.15.7"
argon2 = { version = "0.5.3" }
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = { version = "8" }
chrono = "0.4.42"
once_cell = "1.21.3"
